# handumi-sw

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  NOTICE  README.md  README_gripper.md  README_offset.md  README_pico.md  README_quest.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml
.claude/skills/handumi-commit/: SKILL.md
.codex/skills/handumi-merge/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  hardware_validation.yml
.github/workflows/: ci.yml  docs.yml
assets/openarm/: README.md
assets/openarm/urdf/: openarm_v1.urdf
assets/piper/: piper.urdf  piper.xml
assets/r1lite/: README.md  r1lite.urdf
assets/r1lite/collision_meshes/: left_arm_link1.STL  left_arm_link3.STL  right_gripper_link.STL  torso_link3.STL
assets/scenes/cube_in_box/: scene.xml
assets/trlc-dk1/: LICENSE.trlc-dk1  README.md  TRLC-DK1-Bimanual.urdf  TRLC-DK1-Follower.urdf
assets/yam/: LICENSE.i2rt  README.md  yam_bimanual.urdf
configs/: body_profile.example.yaml  cameras.yaml  feetech.yaml  quality.yaml  rig.example.yaml  scene.yaml  tracking_meta_quest.yaml
configs/calibration/: axol_table.yaml  meta_controller_tcp.yaml  openarmv1_table.yaml  pico_controller_tcp.yaml  piper_table.yaml  r1lite_table.yaml  trlc_dk1_table.yaml  yam_table.yaml
configs/robots/: axol.yaml  openarmv1.yaml  piper.yaml  r1lite.yaml  trlc_dk1.yaml  yam.yaml
configs/train/: act.yaml
docs/: Makefile  README.md  README_body_schema.md  README_calibration.md  README_gripper.md  README_gripper_width.md  README_offset.md  README_piper_real_teleop.md  README_quality.md  README_quest.md  README_tcp_offset.md  README_tracking.md  add_new_embodiment.md  architecture.md  calibration_plan.md  phase-2-motion-tracking.md  pico_retargeting.md  requirements.txt  robot_agnostic_plan.md
docs/source/: conf.py  index.md  record.md  setup.md  teleoperation.md  troubleshooting.md
docs/source/development/: new_embodiment.md  release_checklist.md  test001_protocol_template.md
docs/source/getting_started/: installation.md
docs/source/physical_robots/: openarm_v1_setup.md  piper_setup.md
docs/source/real/: openarm_v1_setup.md
docs/source/workflows/: body_tracking.md  capture_reliability.md  dataset_compatibility.md  datasets.md  pico_remote_vision.md  replay_in_sim.md  visualization.md
release/: asset-manifest.json  dependency-source-inventory.json
scripts/: live_tracking.py  process_umi_to_lerobot.py  record_umi.py
scripts/piper/: replay_from_dataset.py
scripts/setup/: calibrate_gripper_width.py  calibrate_grippers.py  home_servos.py  monitor_gripper_ticks.py  print_controller_pose.py  save_gripper_config.py  scan_cameras.py  scan_feetech.py  setup_ports.py  write_feetech_id.py
src/dexumi/dataset/: __init__.py  pico.py  reader.py  ref.py  schema.py  writer.py
src/dexumi/retargeting/: __init__.py  axol_from_pico.py  pico_to_robot.py  pico_upper_body.py  piper_from_pico.py
src/dexumi/robots/: kinematics.py  loader.py  registry.py  sim.py
src/dexumi/utils/: lerobot_io.py
src/handumi/: config.py  preflight.py  reliability.py  synchronization.py  visualization.py
src/handumi/body/: __init__.py  calibration.py  com.py  mapping.py  model.py  quality.py
src/handumi/calibration/: control_tcp.py  spatial.py
src/handumi/cameras/: __init__.py  base.py  opencv.py  usb.py
src/handumi/capture/: live_tracking.py  live_tracking_quest.py  record_handumi_pico.py  record_handumi_quest.py  robot_follow.py  teleoperate_handumi.py
src/handumi/dataset/: __init__.py  compatibility.py  pico.py  quality.py  raw.py  reader.py  selection.py  tracking_sidecar.py  writer.py
src/handumi/real/: base.py  (+6 more)
test/: compare_axis.py  print_parquet.py  read_pico_cameras_motors.py  replay_pico_ik.py  test_ik_axol.py  test_xrobotoolkit.py  visualize_pico_controller_body_methods.py  visualize_pico_input_trajectories.py  visualize_pico_mandos_vs_trackers.py
test/axol/: compare_axis_maps_axol.py  ik_axol_from_dataset.py  visualize_pico_controllers_upper_axol.py  visualize_pico_inferred_elbows_axol.py
test/dataset/: read_dataset.py
test/piper/: compare_axis_maps_piper.py  ik_piper_from_dataset.py  visualize_pico_piper_retargeting.py  visualize_sim.py
tests/: test_preflight.py  test_release_inventory.py  test_reliability.py  test_synchronization.py
tests/body/: test_body_calibration.py  test_body_quality.py  test_canonical_body.py  test_com.py
tests/calibration/: test_control_tcp_dataset.py  test_spatial.py
tests/cameras/: test_usb.py
tests/capture/: test_record_handumi_pico.py  test_record_handumi_quest.py  test_teleoperate_handumi.py
tests/dataset/: test_compatibility.py  test_quality.py  test_raw_schema.py  test_reader.py  test_selection.py  test_tracking_sidecar.py  test_writer.py
tests/feetech/: test_bus.py  test_calibration.py  test_read.py  test_sampler.py  test_setup.py
tests/ik/: openarm_pico_episode_viser.py
tests/real/: test_backend_setup.py  test_can_setup.py  test_openarm_can.py  test_openarm_gripper_calibration.py  test_piper_can.py
tests/retargeting/: test_handumi_to_robot.py
tests/robots/: test_registry.py
tests/scripts/: test_calibrate_spatial.py  test_calibration_solvers.py  test_cli.py  test_completion.py  test_conversion_gripper.py  test_live.py  test_preflight_cli.py  test_record.py  test_record_teleop.py  test_replay_in_sim.py  test_set_servo_id.py  test_setup_hardware.py  test_setup_ports.py  test_teleop_real.py  test_teleop_sim.py
tests/teleop/: test_action_smoothing.py  test_core.py  test_recording_viewer.py  test_trajectory.py
tests/tracking/: test_live_tracking.py  test_live_tracking_quest.py  test_meta_quest.py  test_pico_adb.py  test_pico_provider.py  test_pico_vision.py  test_quest_probe.py  test_tracking_packet.py  test_transforms.py
tests/training/: test_train.py
tests/validation/: test_validation_groundwork.py
tests/visualization/: __init__.py  test_body_visualization.py  test_controller_trajectory.py  test_view_trajectory.py
utils/: upload_data_to_hf.py
(+136 files in other folders)
