[project]
name = "handumi"
version = "0.1.0"
description = "Robot-free bimanual demonstration recording and retargeting for HandUMI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "lerobot[feetech]==0.5.1",
    "huggingface-hub>=1.0.0,<2.0.0",
    "rerun-sdk>=0.24.0,<0.27.0",
    # Build tools for xrobotoolkit-sdk (CMake-based). Listed here so uv sync
    # tracks them in the lockfile and they are available when building the SDK.
    "cmake>=3.29",
    "pybind11>=2.13",
    "setuptools>=71",
    "python-dotenv==1.2.2",
    "pyyaml>=6.0",
    "opencv-python>=4.10,<5",
    # Axol IK solver (src/handumi/robots/axol/solver.py)
    "numpy>=2.0",
    "jax>=0.4.0",
    "jaxlie>=1.0.0",
    "jaxls @ git+https://github.com/brentyi/jaxls.git",
    "yourdfpy",
    "pyroki @ git+https://github.com/chungmin99/pyroki.git",
    "matplotlib>=3.11.0",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/BrikHMP18/HandUMI"
Repository = "https://github.com/robonet-ai/handumi-sw"
Issues = "https://github.com/robonet-ai/handumi-sw/issues"

[project.optional-dependencies]
piper = [
    "piper_sdk @ git+https://github.com/agilexrobotics/piper_sdk.git",
]
openarm = [
    "openarm_can @ git+https://github.com/enactic/openarm_can.git@1.2.9#subdirectory=python",
]
sim = [
    "viser>=1.0.0",
    "mujoco>=3.9.0",
    "pyvista>=0.43.0",
]
cuda = [
    "jax[cuda13]>=0.4.0",
]

[project.scripts]
handumi-record = "handumi.scripts.record:main"
handumi-teleop-sim = "handumi.scripts.teleop_sim:main"
handumi-teleop-real = "handumi.scripts.teleop_real:main"
handumi-pico-camera = "handumi.scripts.pico_camera:main"
handumi-convert = "handumi.scripts.conversion:main"
handumi-validate = "handumi.scripts.validate:main"
handumi-setup-ports = "handumi.scripts.setup.setup_ports:main"
handumi-setup-hardware = "handumi.scripts.setup.setup_hardware:main"
handumi-set-servo-id = "handumi.scripts.setup.set_servo_id:main"
handumi-home-servos = "handumi.scripts.setup.home_servos:main"
handumi-calibrate-grippers = "handumi.scripts.setup.calibrate_grippers:main"
handumi-print-controller-pose = "handumi.scripts.setup.print_controller_pose:main"
handumi-calibrate-tcp-offset = "handumi.scripts.setup.calibrate_tcp_offset:main"
handumi-calibrate-spatial = "handumi.scripts.setup.calibrate_spatial:main"
handumi-replay-in-sim = "handumi.scripts.replay.replay_in_sim:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/handumi"]

[tool.hatch.build.targets.wheel.force-include]
"assets/axol" = "handumi/assets/axol"
"assets/openarm" = "handumi/assets/openarm"
"assets/piper" = "handumi/assets/piper"
"configs/rig.example.yaml" = "handumi/configs/rig.example.yaml"
"configs/robots" = "handumi/configs/robots"
"configs/calibration" = "handumi/configs/calibration"

[tool.hatch.build.targets.sdist]
include = [
    "src/handumi",
    "assets",
    "configs",
    "docs",
    "README.md",
    "LICENSE",
]

[tool.uv]
no-build-isolation-package = ["xrobotoolkit-sdk"]

[tool.basedpyright]
# "standard" catches real bugs (broken imports, missing attributes, type
# mismatches) without basedpyright's implicit "all" mode, whose reportUnknown*
# family flags every un-annotated numpy ndarray generic as noise.
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = ["external_dependencies/XRoboToolkit-PC-Service-Pybind_X86_and_ARM64"]
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = ["tests"]
