[project]
name = "handumi"
version = "0.1.0"
description = "Research-preview bimanual demonstration recording and retargeting for HandUMI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "rerun-sdk>=0.24.0,<0.27.0",
    "python-dotenv==1.2.2",
    "pyyaml>=6.0",
    "opencv-python>=4.10,<5",
    "numpy>=2.0",
    "pandas>=2.2,<4",
    "pyarrow>=18,<26",
    "feetech-servo-sdk>=1,<2",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/BrikHMP18/HandUMI"
Repository = "https://github.com/robonet-ai/handumi-sw"
Issues = "https://github.com/robonet-ai/handumi-sw/issues"

[project.optional-dependencies]
sim = [
    "viser>=1.0.0",
    "mujoco>=3.9.0",
    "pyvista>=0.43.0",
    "yourdfpy",
]
cuda = [
    "jax[cuda13]>=0.4.0",
]

[project.scripts]
handumi-record = "handumi.scripts.record:main"
handumi-view-trajectory = "handumi.scripts.view_trajectory:main"
handumi-teleop-sim = "handumi.scripts.teleop_sim:main"
handumi-teleop-real = "handumi.scripts.teleop_real:main"
handumi-pico-camera = "handumi.scripts.pico_camera:main"
handumi-convert = "handumi.scripts.conversion:main"
handumi-validate = "handumi.scripts.validate:main"
handumi-setup-ports = "handumi.scripts.setup.setup_ports:main"
handumi-setup-hardware = "handumi.scripts.setup.setup_hardware:main"
handumi-set-servo-id = "handumi.scripts.setup.set_servo_id:main"
handumi-home-servos = "handumi.scripts.setup.home_servos:main"
handumi-calibrate-grippers = "handumi.scripts.setup.calibrate_grippers:main"
handumi-calibrate-openarm-grippers = "handumi.scripts.setup.calibrate_openarm_grippers:main"
handumi-print-controller-pose = "handumi.scripts.setup.print_controller_pose:main"
handumi-calibrate-tcp-offset = "handumi.scripts.setup.calibrate_tcp_offset:main"
handumi-calibrate-spatial = "handumi.scripts.setup.calibrate_spatial:main"
handumi-replay-in-sim = "handumi.scripts.replay.replay_in_sim:main"
handumi-quest-probe = "handumi.tracking.quest_probe:main"
handumi-preflight = "handumi.scripts.preflight:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
ik-source = [
    # PyRoki is not published on PyPI and its metadata declares an unpinned
    # JAXLS URL. Keep both reviewed revisions in a source-only uv group so
    # wheel metadata stays installable and free of direct references.
    "jaxls @ git+https://github.com/brentyi/jaxls.git@f8f8dbb54b3e0c16e8bf014496462a4e675e9389",
    "pyroki @ git+https://github.com/chungmin99/pyroki.git@388e43e1fc0d0ee382968d3dd72970fd62a0450c",
]
recording-source = [
    # LeRobot currently requires PyTorch. uv's source policy below resolves it
    # from the CPU-only index; wheel metadata cannot portably express that
    # index, so recording remains a source-install group for this preview.
    "lerobot[feetech]==0.5.1",
    "huggingface-hub>=1.0.0,<2.0.0",
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
]
pico-source = [
    "cmake>=3.29",
    "pybind11>=2.13",
    "setuptools>=71",
]
piper-source = [
    "piper_sdk @ git+https://github.com/agilexrobotics/piper_sdk.git@c05c5454b1cf61c05ad26385e0c0a3aa6d3c7bad",
]
openarm-source = [
    "openarm_can @ git+https://github.com/enactic/openarm_can.git@1.2.9#subdirectory=python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/handumi"]

# The tracked R1 Lite model has provenance but no redistribution grant. Keep
# it out of every built distribution until the copyright owner supplies terms.
[tool.hatch.build]
exclude = [
    "assets/r1lite/**",
    "configs/robots/r1lite.yaml",
    "configs/calibration/r1lite_table.yaml",
]

[tool.hatch.build.targets.wheel.force-include]
"assets/axol" = "handumi/assets/axol"
"assets/openarm" = "handumi/assets/openarm"
"assets/piper" = "handumi/assets/piper"
"assets/trlc-dk1" = "handumi/assets/trlc-dk1"
"assets/yam" = "handumi/assets/yam"
"configs/rig.example.yaml" = "handumi/configs/rig.example.yaml"
"configs/body_profile.example.yaml" = "handumi/configs/body_profile.example.yaml"
"configs/robots" = "handumi/configs/robots"
"configs/calibration" = "handumi/configs/calibration"

[tool.hatch.build.targets.sdist]
include = [
    "src/handumi",
    "assets",
    "bin",
    "configs",
    "docs",
    "README.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "LICENSE",
]

[tool.uv]
default-groups = ["dev", "ik-source", "recording-source"]
no-build-isolation-package = ["xrobotoolkit-sdk"]

# Recording, validation, and CI do not require CUDA-enabled PyTorch. Keeping
# the default LeRobot transitive dependency on the official CPU index avoids
# multi-gigabyte NVIDIA runtime downloads; GPU users can manage an accelerator
# environment separately from this reproducible release lock.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.basedpyright]
# "standard" catches real bugs (broken imports, missing attributes, type
# mismatches) without basedpyright's implicit "all" mode, whose reportUnknown*
# family flags every un-annotated numpy ndarray generic as noise.
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
extraPaths = ["external_dependencies/XRoboToolkit-PC-Service-Pybind_X86_and_ARM64"]
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = ["tests"]
